# devices

./: CLAUDE.md  LICENSE  Makefile  README.md  hello.py  ie100.py  ie120.py  ie250.py  pyproject.toml
DX120P/verilog/agilex/: dx120p_agilex.v  reset_release.ip  top.v
DX120P/verilog/sim/: README  dx120p_func.v  test.py  test.v
IE120R/imagenet/: README  classify.py
IE120R/pretrain/: README  pretrain.py
IE120R/scripts/: classify.py  dataset.bash
IE120R/verilog/agilex/: README  ie120r_agilex.v  top.sdc
IE120R/verilog/sim/: ie120r_func.v
deprecated/: finetune.py  ie120.py  test.py
deprecated/coco/: readme
deprecated/pretrain/: Makefile  accuracy.py  convnext.py  resnet.py
deprecated/pretrain/imagenet/: readme
dev/: chart.py  cnnlm.odp  doit  generate.py  log.2025.09.17-17.31.20  models.py  pretrain.py  push_to_hub.py  requirements.txt
dev/log/: log.2025.10.02-11.09.32
ie120/: IE120.py  Makefile  batch.py  coco.py  dataset.py  finetune.py  ie120.py  pretrain.py  test.py
ie120/pretrain/: Imagenet.py  Makefile  finetune.py  pretrain.py  test.py
imagenet/val/: flist
pretrain/: Makefile  accuracy.py  chart.py  convnext.py  imagenet.py  pretrain.py  resnet.py
scripts/: pretrain.py
src/siliconperception/: DX120P.py  IE120L.py  IE120NX.py  IE120R.py
verilog/agilex/: ie120r_agilex.v  top.v
verilog/agilex/ip/: bias_L03.ip  bias_L05.ip  bias_L08.ip  bias_L09.ip  bias_L12.ip  bias_L13.ip  bias_L14.ip  bias_L15.ip  bias_L18.ip  bias_L19.ip  bias_L20.ip  bias_L22.ip  weight_L01O00.ip  weight_L01O01.ip  (+656 more)
verilog/sim/: README  test.py  test.v
(+1516 files in other folders)
